trunk/Archive2/c6/fcba8f02abee33/output
main.cpp:1:5: error: 'base_box' does not name a type
     base_box<base_vec3<float>> box { { 1,2,3 }, { 4,5,6 } };
     ^
main.cpp:1:60: warning: extra ';' [-Wpedantic]
     base_box<base_vec3<float>> box { { 1,2,3 }, { 4,5,6 } };
                                                            ^
