trunk/Archive2/c6/fcba8f02abee33/main.cpp
    base_box<base_vec3<float>> box { { 1,2,3 }, { 4,5,6 } };
